<resources>

    <!--Nav Header Drawler-->
    <string name="app_name">Els-Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Els-Connect</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Nav label Drawler-->
    <string name="nav_label_home">Home</string>
    <string name="nav_label_profile">Profile</string>
    <string name="nav_label_logout">Logout</string>
    <string name="nav_label_about">About</string>

    <!--Login -->
    <string name="logo_desc" />
    <string name="log_email_hint">Your Email</string>
    <string name="log_pass_hint">Password</string>
    <string name="log_btn_text">Login</string>
    <string name="log_reg_btn_text">Need a new Account?</string>

    <!--Regist-->
    <string name="reg_logo_desc" />
    <string name="reg_email_hint">Email</string>
    <string name="reg_pass_hint">Password</string>
    <string name="reg_repass_hint">Confirm Password</string>
    <string name="reg_creat_btn_text">Create Account</string>
    <string name="reg_already_hint">Already have an Account?</string>
    <string name="action_notif_text">Notification</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_notif">Notification</string>

</resources>
