<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_icon_nav_home"
            android:icon="@mipmap/ic_launcher_home"
            android:title="@string/nav_label_home" />
        <item
            android:id="@+id/id_icon_nav_profile"
            android:icon="@mipmap/ic_launcher_profile2"
            android:title="@string/nav_label_profile" />
        <item
            android:id="@+id/id_icon_nav_about"
            android:icon="@mipmap/ic_launcher_about"
            android:title="@string/nav_label_about" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="Action">
        <menu>
            <item
                android:id="@+id/id_icon_nav_logout"
                android:icon="@mipmap/ic_launcher_logout"
                android:title="@string/nav_label_logout" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

</menu>
