<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglog"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginPagelogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"

        android:layout_marginTop="63dp"
        android:contentDescription="@string/logo_desc"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/log_email_hint"

        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/log_pass_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#828282"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/log_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="27dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:text="@string/log_reg_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark" />

    <!--<ProgressBar-->
        <!--android:id="@+id/login_progress"-->
        <!--style="?android:attr/progressBarStyleHorizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!---->
        <!--android:indeterminate="true"-->
        <!--android:visibility="visible" />-->


</LinearLayout>